public/stylesheets/redesign/dashboard.css
/* Favorites styles */

.favorites_bar {
  background-color: #788AA2;
  border: 0 none;
}

.favorite_button {font-size: 11px; color: #444;
    -moz-border-radius:5px; border-radius:5px; border: 1px solid #666;
    -moz-user-select:none;
    -webkit-user-select:none;
    padding:1px 3px;
    background: #eee;
    background: -moz-linear-gradient(center bottom,rgb(233,233,233) 24%,rgb(243,243,243) 55%,rgb(253,253,253) 87%);
    background-image:-webkit-gradient(linear,left bottom,left top,color-stop(0.24, rgb(233,233,233)),color-stop(0.55, rgb(243,243,243)),color-stop(0.87, rgb(253,253,253)));
}

.favorite_button.x-btn-over{
    background: #fff;
    background: -moz-linear-gradient(center bottom,rgb(233,233,233) 14%,rgb(255,255,255) 34%,rgb(255,255,255) 74%);
    background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0.14, rgb(233,233,233)),color-stop(0.34, rgb(255,255,255)),color-stop(0.74, rgb(255,255,255)));
}

.favorite_button.x-btn-over.x-btn-click{
    background: #bbb;
}

/* Dashboard CSS */

.x-portlet-html{
  padding: 10px;
}

.portlet{
  margin: 5px 0px;
}

.portlet.user-mode .x-tool{
  display: none;
}

.portlet.user-mode .x-tool-refresh{
  display: block;
}

.rss-node{
  margin: 2px 0px;
}

.rss-node table{
  width: 100%;
}
.rss-node table tr td.tf{
  width: 20%;
}
.rss-node table tr td.ts{
  width: 70%;
}
.rss-node table tr td.tt{
  width: 10%;
  text-align: right;
}
.rss-title,
.dash-forum-name, 
.dash-forum-topic-name,
.dash-doc-filename,
.dash-doc-folder-name{
  color: #0069D6;
  text-decoration: underline;
  cursor: pointer;
}

.rss-launch{
  height: 16px;
  width: 16px;
  margin: 0px 0px 0px 4px;
  display: inline-block;
  vertical-align: text-bottom;
  background-image:url(/images/edit-copy-5.png)
}

.dash-twitter-entry,
.dash-rss-entry,
.dash-doc-node,
.dash-alert-node,
.dash-forum-post, 
.dash-forum-topic{
  background: white;
  border: 1px solid #D0D0D0;
  border-radius: 3px;
  margin: 2px 0px;
  padding: 3px;
}

.dash-forum-image,
.dash-twitter-image{
  margin: 0px 3px 0px 0px;
  float: left;
}

.dash-rss-body{
  max-height: 300px;
  overflow-y: auto;
}

.t_boot .x-tip-header-text{
  font-size: 13px;
  font-weight: bold;
  line-height: 18px;
}
.x-tip-body .dash-rss-entry{
  margin: 0px !important;
}
.x-tip-body .t_boot p{
  font-size: 11px !important;
}
.x-tip-body .t_boot img{
  width: 30%;
  height: 30%;
}

.dash-forum-post-details,
.dash-alert-title{
  padding: 0px 0px 3px;
  border-bottom: 1px solid #D0D0D0;
}

.dash-forum-post{
  clear: both;
}

.dash-forum-content{
  padding: 5px 10px 2px;
}

